# data-analyst

./: README.md
backend/: README.md  main.py  pyproject.toml  requirements.txt  test_responses.py
backend/ai/: __init__.py  main.py
backend/api/: __init__.py  main.py  models.py
backend/models/: __init__.py  api_models.py
backend/services/: __init__.py  ai_service.py  analysis_runtime.py  data_service.py
backend/services/runtime/: __init__.py  actions.py  causal.py  charting.py  ml.py  trust.py
backend/tests/: test_analysis_runtime.py  test_data_service.py  test_ml_runtime.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/actions/approve/: route.ts
frontend/app/api/actions/draft/: route.ts
frontend/app/api/analyze/: route.ts
frontend/app/api/analyze/stream/: route.ts
frontend/app/api/causal-lab/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/chat/stream/: route.ts
frontend/app/api/hypotheses/: route.ts
frontend/app/api/sprint/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: CSVUploader.tsx  ChatInterface.tsx  DataChatInterface.tsx  DataPreview.tsx  DynamicChart.tsx  MLLab.tsx
frontend/components/data-chat/: ActionDraftsPanel.tsx  AssistantMessageContent.tsx  ExplorationPanel.tsx  MarkdownMessage.tsx  TrustPanel.tsx
frontend/lib/: analyze-stream.ts  api.ts  env.ts  fetch.ts  proxy.ts
frontend/types/: chat.ts
(+2 files in other folders)
